tried and failed to fix the text alignment deal with it

--- a/entropy/entropy.css
+++ b/entropy/entropy.css
@@ -1,17 +1,18 @@
-#inputdiv {
-    
+#inputdiv { 
+    width:100vw;
     margin: auto;
     margin-top:20vh;
-   
-    max-width: 60vw;
     text-align: center;
     font-size: 32px;
     font-weight: bold;
     color: rgb(72, 72, 34);
     font-family: 'Courier New', Courier, monospace;
+   
 }
+
+
 #seed {
-    width:100%;
+    width:60%;
     height: 4vh;
     border: 4px solid rgb(72, 72, 34);
     background-color: rgb(203, 203, 176);
@@ -22,6 +23,7 @@
     font-weight:bold;
     color: black;
 }
+
 body {
     margin: auto;
     font-family: 'Courier New', Courier, monospace;
